# terrible-hashes

./: Cargo.toml  README.md
src/: lib.rs
src/checksums/: cosmological_constants.rs  image_bitshift.rs  mod.rs
src/hashes/: equality_hashers.rs  mod.rs  tripple_string_hash.rs
